; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_register_dummy_window_class.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_register_dummy_window_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@registered_dummy_window_class = common dso_local global i32 0, align 4
@CS_OWNDC = common dso_local global i32 0, align 4
@DefWindowProc = common dso_local global i32 0, align 4
@dummy_window_class = common dso_local global i32 0, align 4
@LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Could not create dummy window class\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @gl_register_dummy_window_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gl_register_dummy_window_class() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = load i32, i32* @registered_dummy_window_class, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %22

6:                                                ; preds = %0
  %7 = call i32 @memset(%struct.TYPE_4__* %2, i32 0, i32 16)
  %8 = load i32, i32* @CS_OWNDC, align 4
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 3
  store i32 %8, i32* %9, align 4
  %10 = call i32 @GetModuleHandle(i32* null)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @DefWindowProc, align 4
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @dummy_window_class, align 4
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = call i32 @RegisterClassA(%struct.TYPE_4__* %2)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %6
  %19 = load i32, i32* @LOG_ERROR, align 4
  %20 = call i32 @blog(i32 %19, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %22

21:                                               ; preds = %6
  store i32 1, i32* @registered_dummy_window_class, align 4
  store i32 1, i32* %1, align 4
  br label %22

22:                                               ; preds = %21, %18, %5
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @GetModuleHandle(i32*) #1

declare dso_local i32 @RegisterClassA(%struct.TYPE_4__*) #1

declare dso_local i32 @blog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
